@@ -21,6 +21,13 @@
 		<sourceDirectory>src/main/java</sourceDirectory>
 		<plugins>
 			<plugin>
+			    <artifactId>maven-compiler-plugin</artifactId>
+			    <configuration>
+				<source>1.5</source>
+				<target>1.5</target>
+			    </configuration>
+			</plugin>
+			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>exec-maven-plugin</artifactId>
 				<version>1.1</version>
@@ -32,12 +39,17 @@
 					</execution>
 				</executions>
 				<configuration>
-					<mainClass>org.mmisw.watchdog.cf.SKOSCFCreator</mainClass>
+					<mainClass>org.mmisw.watchdog.Cf</mainClass>
 				</configuration>
 			</plugin>
 		</plugins>
 	</build>
 	<dependencies>
+		<dependency>
+			<groupId>org.mmisw.tp</groupId>
+			<artifactId>skosapi</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 		<dependency>
 			<groupId>com.hp.hpl.jena</groupId>
 			<artifactId>jena</artifactId>
@@ -52,11 +64,6 @@
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-log4j12</artifactId>
 			<version>1.5.2</version>
-		</dependency>
-		<dependency>
-			<groupId>org.mmisw.tp</groupId>
-			<artifactId>skosapi</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 </project>
